# ppi-prediction-gnn

./: README.md  pyproject.toml
notebooks/: clean_data.ipynb  prepare_data.ipynb  protbert.ipynb  protein2graph.ipynb  seqvec.ipynb  testing.ipynb  training.ipynb
utils/: data_prep.py  metrics.py  models.py  protbert.py  uniprot_idmapping.py
