[tool.poetry]
name = "ppi-prediction-gnn"
version = "0.1.0"
description = ""
authors = [
    "fruit-bird <github.ru3w9@slmail.me>",
    "RedVelvetOth <boumyaothmane@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.0.3"
numpy = "^1.25.2"
tqdm = "^4.66.1"
networkx = "^3.1"
matplotlib = "^3.7.2"
bio = "^1.5.9"
biographs = "^0.1"
torch = "^2.0.1"
torch-geometric = "^2.3.1"
transformers = "^4.32.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
